--- a/front/src/app/(pages)/contests/[contest]/submissions/[id]/submission.module.css
+++ b/front/src/app/(pages)/contests/[contest]/submissions/[id]/submission.module.css
@@ -20,18 +20,55 @@ div.onlyme label {
 }
 
 .c-wj {
-	background-color: gray;
+	background-color: darkgray;
 }
 
 .c-ac {
-	background-color: green;
+	background-color: #5cb85c;
 }
 
-.c-wa, .c-ce, .c-tle, .c-re, .c-mle, .c-ole, .c-qle {
-	background-color: yellowgreen;
+.c-wa {
+	background-color: #f0ad4e;
 }
 
-.c-wj, .c-ac, .c-wa, .c-ce, .c-tle, .c-re, .c-mle, .c-ole, .c-qle {
+.c-tle {
+	background-color: hotpink;
+}
+
+.c-ce {
+	background-color: dodgerblue;
+}
+
+.c-re {
+	background-color: darkviolet;
+}
+
+.c-mle {
+	background-color: maroon;
+}
+
+.c-qle {
+	background-color: maroon;
+}
+
+.c-ole {
+	background-color: salmon;
+}
+
+.c-ie {
+	background-color: darkslategray;
+}
+
+.c-wj,
+.c-ac,
+.c-wa,
+.c-ce,
+.c-tle,
+.c-re,
+.c-mle,
+.c-ole,
+.c-qle,
+.c-ie {
 	border: none;
 	border-radius: 0.2rem;
 	height: 1.5rem;
@@ -39,4 +76,8 @@ div.onlyme label {
 	display: inline-flex;
 	align-items: center;
 	place-content: center;
+}
+
+.detailResult {
+	margin: 0 0.4rem;
 }
