--- a/front/src/app/(pages)/contests/[contest]/page.module.css
+++ b/front/src/app/(pages)/contests/[contest]/page.module.css
@@ -23,7 +23,7 @@
 }
 
 .contest_title ul * {
-	width: 200px;
+	width: 250px;
 	margin: 0 20px;
 	padding-top: 4px;
 	border: 1px solid;
@@ -63,6 +63,22 @@
 .contest_title .unrated_button:active {
 	background-color: lightgray;
 	color: #102030;
+}
+
+.contest_title .cancel_button {
+	background-color: red;
+	color: white;
+	transition: 0.2s;
+}
+
+.contest_title .cancel_button:hover {
+	background-color: #ff5050;
+	color: white;
+}
+
+.contest_title .cancel_button:active {
+	background-color: white;
+	color: #ff5050;
 }
 
 .description {
