[add] Add edit & delete contest gui

--- a/front/src/app/(admin)/admin/contests/form.module.css
+++ b/front/src/app/(admin)/admin/contests/form.module.css
@@ -56,3 +56,14 @@
 	-webkit-appearance: none;
 	margin: 0;
 }
+
+.body1 .delete {
+	background-color: red;
+	color: white;
+}
+
+.body1 .check {
+	margin: 0 10px;
+	text-align: right;
+	width: initial;
+}
